# ninjasystematics

./: .gitignore  CMakeLists.txt
cmake/modules/: FindMcs.cmake  FindWagasciReWeight.cmake
data/: bmsyst  likelihood_param.txt  vph_dist_pi.txt  vph_func_param.txt
data/ratio/: maccqe_syst_hist_muon_mom_range_ratio.txt  md_syst_hist_muon_ang_deg_ratio.txt  md_syst_hist_muon_mom_mcs_ratio.txt  md_syst_hist_muon_mom_range_ratio.txt  md_syst_hist_muon_mom_ratio.txt  md_syst_hist_pion_ang_deg_ratio.txt  md_syst_hist_pion_mom_mcs_ratio.txt  md_syst_hist_pion_mom_range_ratio.txt  md_syst_hist_pion_mom_ratio.txt  md_syst_hist_proton_ang_deg_ratio.txt  md_syst_hist_proton_mom_mcs_ratio.txt  md_syst_hist_proton_mom_range_ratio.txt  md_syst_hist_proton_mom_ratio.txt  md_syst_hist_water_mode_multi_ratio.txt  md_syst_hist_water_mode_pion_multi_ratio.txt  (+2 more)
example/: FluxErr_analysis.cc  plot_FluxErr_analysis.cc
macro/: CalcRatio.C  CalcVphDataSystematics.C  CalcVphFitSystematics.C  CheckFadeToParam.C  CheckFadingErr.C  CompareDetectorError.C  CompareInteractionError.C  DrawBMSystematics.C  DrawFluxCovariance.C  DrawResult.C  FluxErr.C  FluxReWeight.C  MakeTempFiles.C  McsParameterTuneErr.C  MergeDetectorCovMat.C  MergeInteractionCovMat.C  draw_flux_errors_total.cc  numu_flux_reweight.root  numu_flux_reweight_wall.root  numub_flux_reweight.root
shell/: run_det_cov.sh  run_xsec_cov.sh  submit_det_cov.py  submit_xsec_cov.py
src/: CMakeLists.txt  DetectorCovariance.cpp  InteractionModelCovariance.cpp  InteractionModelMyReWeight.cpp  InteractionModelSystematics.cpp
(+16 files in other folders)
